--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
   </marquee>
 
   <div class="" style="display: flex">
-    <div class="col-8" style="padding: 0">
+    <div class="col" style="padding: 0">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -367,27 +367,27 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
         </ol>
-        <div class="carousel-inner" style="height: 76vh">
+        <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="slides/1.jpg" alt="First slide" />
+            <img class="d-block w-100" src="slide/1.jpg" alt="First slide" />
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="slides/3.jpg" />
+            <img class="d-block w-100" src="slide/3.jpg" />
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="slides/4.jpg" alt="Third slide" />
+            <img class="d-block w-100" src="slide/4.jpg" alt="Third slide" />
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="slides/5.jpg" alt="Third slide" />
+            <img class="d-block w-100" src="slide/5.jpg" alt="Third slide" />
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="slides/6.jpg" alt="Third slide" />
+            <img class="d-block w-100" src="slide/1.jpg" alt="Third slide" />
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="slides/10.jpg" alt="Third slide" />
+            <img class="d-block w-100" src="slide/10.jpg" alt="Third slide" />
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="slides/8.jpg" alt="Third slide" />
+            <img class="d-block w-100" src="slide/8.jpg" alt="Third slide" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -399,12 +399,6 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
-    <div class="col-4 text-white" style="background: rgba(144, 34, 3, 1); height: 76vh; overflow: hidden">
-      <marquee behavior="alternate" direction="up" style="margin: -15px; padding: 0">
-        <img src="slides/1.jpg " w-100 alt="" width="100%" />
-        <img src="slides/3.jpg " w-100 alt="" width="100%" />
-      </marquee>
     </div>
   </div>
 
